# strands_karl

./: CMakeLists.txt  README.md  package.xml
launch/: karl_cams.launch  karl_localization_only.launch  karl_navigation.launch  karl_people.launch  karl_robot.launch  strands_navigation.launch
resources/: SCITOSDriver.xml  SCITOSRobotAttributes.xml  diagnostics.yaml  dwa_planner_ros.yaml  umic_1st_floor-nav.yaml
resources/maps/: umic_1st_floor-big.yaml  umic_1st_floor-half-nav.yaml  umic_1st_floor-half-nogo.yaml  umic_1st_floor-half.yaml  umic_1st_floor-nogo.yaml  umic_1st_floor.tplg  umic_1st_floor.yaml
scripts/: aaf_recording.bash  generic_startup.bash  karl_bringup.bash  marathon.bash  marathon_recovery.py  marathon_routine_node.py  record.fish
